@@ -16,6 +16,7 @@
   <DeployTargets />
   <Contents>
     <File name="./DoubleCheckLockingRule.cs" subtype="Code" buildaction="Compile" />
+    <File name="./WriteStaticFieldFromInstanceMethodRule.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
